# Lab5

./: CMakeLists.txt  README.md  methods.h  task1.cpp  task11.cpp  task2.cpp  task3.cpp  utils.h
